WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231807
[iOS] Screen Sharing doesn't switch to AirPlay when <video> enters fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=231807
Summary
[iOS] Screen Sharing doesn't switch to AirPlay when <video> enters fullscreen...
Jer Noble
Reported
2021-10-15 08:43:54 PDT
[iOS] Screen Sharing doesn't switch to AirPlay when <video> enters fullscreen mode
Attachments
Patch
(5.70 KB, patch)
2021-10-15 08:55 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-10-15 08:45:11 PDT
<
rdar://82995799
>
Jer Noble
Comment 2
2021-10-15 08:55:11 PDT
Created
attachment 441383
[details]
Patch
Peng Liu
Comment 3
2021-10-15 09:24:45 PDT
Comment on
attachment 441383
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=441383&action=review
> Source/WebKit/ChangeLog:10 > + <video> element is in fullscreen mode. However, the fullscreen state this code depends on
Is this true for element fullscreen as well?
Jer Noble
Comment 4
2021-10-15 11:45:41 PDT
(In reply to Peng Liu from
comment #3
)
> Comment on
attachment 441383
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=441383&action=review
> > > Source/WebKit/ChangeLog:10 > > + <video> element is in fullscreen mode. However, the fullscreen state this code depends on > > Is this true for element fullscreen as well?
No, only for video fullscreen.
Jer Noble
Comment 5
2021-10-15 11:47:01 PDT
(In reply to Jer Noble from
comment #4
)
> (In reply to Peng Liu from
comment #3
) > > Comment on
attachment 441383
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=441383&action=review
> > > > > Source/WebKit/ChangeLog:10 > > > + <video> element is in fullscreen mode. However, the fullscreen state this code depends on > > > > Is this true for element fullscreen as well? > > No, only for video fullscreen.
Oh, disregard, it's true for "standby mode" as well, so element fullscreen too. (Also fixed by this patch).
EWS
Comment 6
2021-10-15 17:00:16 PDT
Committed
r284294
(
243092@main
): <
https://commits.webkit.org/243092@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441383
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug